# barcodeqc

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  cli.py  parse_merLists.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  e2e.yml
barcode_files/barcode_A/: merList220_20-MAY.3.tsv  merList50.tsv
barcode_files/barcode_B/: merList220_25-APR.tsv  merList96.tsv
barcodeqc/: __init__.py  bc_sets.py  cli.py  config.py  files.py  logging.py  logging_helpers.py  merchecker.py  paths.py  plots.py  qc.py  qc_config.py  qc_steps.py  report.py  report_cli.py  steps.py  utils.py
barcodeqc/data/barcode_files/barcode_A/: merList210p30Draft.tsv  merList220_18-SEP.tsv  merList220_25-APR.tsv  merList96.tsv  merListfg96.tsv
barcodeqc/data/barcode_files/barcode_B/: merList210.tsv  merList220_05-OCT.tsv  merList50.tsv  merListfg96.tsv
barcodeqc/data/position_files/: x96_all_tissue_positions_list.csv  xbc220_05OCT_alltissue_positions_list.csv  xbc220_25APR_alltissue_positions_list.csv
barcodeqc/data/static/: report.css
position_files/: merList210.tsv  merList210p30Draft.tsv  merList220_05-OCT.tsv  merList220_18-SEP.tsv  merList220_20-MAY.3.tsv  merList220_25-APR.tsv  merList50.tsv  merList96.tsv  merListfg96.tsv  x50_all_tissue_positions_list.csv  xbc220-20MAY_alltissue_positions_list.csv  xfg96_11DEC_alltissue_positions_list.csv
tests/: conftest.py  test_cli.py  test_config.py  test_files.py  test_qc_e2e.py  test_report.py  test_steps_subprocess.py  test_steps_unit.py  test_utils.py
tests/data/example_fastq/: tissue_positions_list.csv
tests/data/example_outputs/figures/: L1_barplot.html  L1_pareto.html  L2_barplot.html  L2_pareto.html  dense_on_off.html
tests/data/example_outputs/tables/: L1_counts.csv  L1_hiLoWarn.csv  L2_counts.csv  input_parameters.json  onoff_tissue_table.csv  qc_table.csv  spatialTable.csv
whitelists/: bc50.txt  bc96FG_11DEC.txt
