[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "barcodeqc"
version = "0.1.0"
description = "CLI tools for barcode QC of AtlasXomics experiments."
requires-python = ">=3.11"

[tool.setuptools.package-data]
barcodeqc = [
    "data/position_files/*.csv",
    "data/barcode_files/barcode_A/*.tsv",
    "data/barcode_files/barcode_B/*.tsv",
]
