[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "barcodeqc"
authors = [
    {name = "James McGann", email = "jpaulmcgann@gmail.com"},
    {name = "Jeff Sabina", email = "jeffreys@atlasxomics.com"}
]
version = "0.1.0"
description = "CLI tools for barcode QC of AtlasXomics experiments."
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "numpy == 1.26.4",
  "seaborn == 0.12.2",
  "scipy == 1.10.1",
  "matplotlib",
  "jinja2",
  "cutadapt == 4.6",
]

[tool.setuptools.package-data]
barcodeqc = [
    "data/position_files/*.csv",
    "data/barcode_files/barcode_A/*.tsv",
    "data/barcode_files/barcode_B/*.tsv",
]

[project.scripts]
barcodeqc = "barcodeqc.cli:run"
